@@ -1,3 +1,5 @@
+  - Document Output::Test clear_messages method
+
 0.116 2015-02-23T18:00:00+01:00
   - Fix link in 'Writing Filters' section of
     Message::Passing::Manual::Components
